# Lavenza

./: actor.py  agent.py  checklist.txt  critic.py  main.py  model.py  model_transformer.py  pyproject.toml  replay_buffer.py  sac_main.py  test.py
logs/LunarLanderContinuous-v2/AgentPPO/exp_2022-08-11-23-38-17_cuda:2_TSGTrXL/: config.txt
model/: __init__.py  bert.py  gtrxl.py  stt.py  utils.py
results/: TD3_HalfCheetah-v2_0.npy
