[tool.poetry]
name = "lavenza"
version = "0.1.0"
description = ""
authors = ["n0k0m3 <vmnguyen251@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.25.1"
pybullet = "^3.2.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
tensorboard = "^2.9.1"
poethepoet = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
## PyTorch with CUDA 11.5. If PyTorch is imported first, importing Tensorflow will detect CUDA + cuDNN bundled with PyTorch
## Run with the command "poe force-cuda11"
## See https://github.com/python-poetry/poetry/issues/2543
force-cuda11 = "pip install torch==1.11.0+cu115 --extra-index-url https://download.pytorch.org/whl/cu115"